# First_Projects

./: README.md
1.Table_order_and_auto_delivery/robot_service_ws/install/: local_setup.sh  setup.sh
1.Table_order_and_auto_delivery/robot_service_ws/log/: latest_build
2.Co-op_robot_operation/: pallet_stopped_JH.drl
3.Co-op_robot_programming/: README.txt  grip.sh  release.sh
3.Co-op_robot_programming/DR_ws/install/: local_setup.sh  setup.sh
4.Vision_AI_inspection/: detection_summary_241202_170449.xlsx  recognition_local_v6.py
4.Vision_AI_inspection/realtime test result-confidence050/: .~lock.detection_summary_241202_114209.xlsx#  detection_summary_241202_114209.xlsx
4.Vision_AI_inspection/vision_ws/: .~lock.detected_results_241202_102527.xlsx#  DETECT2.PY  detected_results_241129_180523.xlsx  detected_results_241202_100625.xlsx  detected_results_241202_100929.xlsx  detected_results_241202_102451.xlsx  detected_results_241202_102527.xlsx  detected_results_241202_104958.xlsx
5.Multi_autonomous_robot_system/: commands.txt
5.Multi_autonomous_robot_system/기록/: arm접기_펴기.webm
6.SLAM/rbvacuum_ws/: image_ros2.py
6.SLAM/rbvacuum_ws/src/automap/: CMakeLists.txt
6.SLAM/rbvacuum_ws/src/automap/automap/: mapping.py  pseudoCode.py  temp.py
6.SLAM/rbvacuum_ws/src/automap/launch/: automap.launch.py
6.SLAM/rbvacuum_ws/src/automap/map/: map.pgm  map.yaml
8.Observation_system_with_tracking/: C-5_Business_Reqmnt.docx  C-5_Detailed Design.docx  C-5_System Design.docx  C-5_System_Reqmnt.docx
8.Observation_system_with_tracking/tomjo_ws/: example.db
(+1190 files in other folders)
